--- a/Module5/index.html
+++ b/Module5/index.html
@@ -154,7 +154,7 @@ function president_filter(){
     may use a cdv parser from any available library, though I encourage you to try the d3 one). <br>
 
     Now that you have the presidents data loaded, write a function that will return that 
-    president’s height & weight when you type it in. This can be typed into either an input box or 
+    president's height & weight when you type it in. This can be typed into either an input box or 
     an alert box, and then print the result in a box or on the webpage.
 </p>
 
