--- a/FinalProject/data608-final-project/src/index.html
+++ b/FinalProject/data608-final-project/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Data608FinalProject</title>
+  <title>Zach Alexander - Data 608 Final</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
