uploads python notebook

--- a/FinalProject/data608-final-project/public/index.html
+++ b/FinalProject/data608-final-project/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Data608FinalProject</title>
+  <title>Zach Alexander - Data 608 Final</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles.b5d7bc7668d8946f0132.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.8e0f019cf15f7655c86f.js" type="module"></script><script src="main-es5.8e0f019cf15f7655c86f.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.6147b87a7d996e337ac0.js" type="module"></script><script src="main-es5.6147b87a7d996e337ac0.js" nomodule defer></script></body>
 </html>
